<resources>
    <string name="app_name">Kantin Lahap</string>
    <string name="msg_daily">Have you eaten yet? let\'s order first in our favorite canteen</string>
    <string name="phone_number">phone number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="join_now">Don\'t Have an account? Register Here</string>

    <string name="app_motto">#MakanDenganLahap</string>
    <string name="applogo">appLogo</string>
    <string name="email">Email IPB</string>
    <string name="create_account">Create Account</string>
    <string name="write_your_name">Please write your username</string>
    <string name="write_email_address">Please write your email address</string>
    <string name="write_phone_number">Please write your phone number</string>
    <string name="write_your_password">Please write your password</string>
    <string name="write_valid_phone_number">Please write valid phone number</string>
    <string name="valid_email_address">Please write valid email address</string>
    <string name="checking_credentials">Please wait while we are checking your credentials..</string>
    <string name="username_ipb">Username IPB</string>
    <string name="account_created">Your account has been created</string>
    <string name="try_again_later">Network error, please try again after some time..</string>

    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="food_image">food_image</string>
    <string name="add_product">Add Product</string>
    <string name="todo">TODO</string>
    <string name="snack">Snack</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="delete_this_product">Delete this Product</string>
    <string name="add_new_product">Add New Product</string>
    <string name="logout">Logout</string>
    <string name="update_product">Update Product</string>
    <string name="user_logout">Logout</string>

    <string name="cart">Cart</string>
    <string name="login_user">Login Student</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="price">Price : Rp </string>
    <string name="select_canteen">Select Canteen</string>
    <string name="order_status">Order Status</string>
    <string name="order_history">Order History</string>
    <string name="account">Account</string>
    <string name="full_name">Full name</string>
    <string name="your_name">Your Name</string>
    <string name="user_name">user_name</string>
    <string name="email_ex">user_name@apps.ipb.ac.id</string>
    <string name="hint_phone">08xxx</string>
    <string name="secret">******</string>
    <string name="sign_up">Sign Up</string>
    <string name="table_no">Table no : </string>
    <string name="hint_login_seller">Login Seller</string>
    <string name="total_amount">Total Amount</string>
    <string name="time_pick">Time Pick</string>
    <string name="next_to_online_payment">Next to Online Payment</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_id" translatable="false">product_id</string>
    <string name="online_payment" translatable="false">Online Payment</string>
    <string name="already_pay">Already Pay This One</string>
    <string name="valid_email_ipb_address">Please write valid email IPB adrress</string>
    <string name="menu_detail">Menu Detail</string>
    <string name="nutrition_detail">Nutrition Detail</string>
    <string name="help">About Us</string>
    <string name="order_id">Order ID</string>
    <string name="order_list">Order List</string>
    <string name="email_lahap">cs@kantinlahap.com</string>
    <string name="product_available">Apakah produk masih tersedia?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="rekening_nama">Tuliskan Nama yang ada di Rekening Anda</string>
    <string name="order_type_dir_in" translatable="false">Jika anda berada di kantin, maka pilih pesan ditempat, untuk selain itu pesan diluar</string>
    <string name="direct_order">Direct Order</string>
    <string name="indirect_order">Indirect Order</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="qr_code_on_table">Scan the QR code which located on the table</string>
    <string name="set_time">Set Time</string>
    <string name="indirect_text">Please specify the time to take food</string>
    <string name="confirm_your_detail_order">Please confirm your detail order</string>
    <string name="product_list" translatable="false">Order list</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="login_account" translatable="false">Login account</string>
    <string name="check_credential">Please wait while we are checking your credentials..</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="incorrect_username">Username is incorrect</string>
    <string name="account_with_username">Account with username</string>
    <string name="does_not_exist">does not exist</string>
    <string name="register">Register</string>
    <string name="username_has_already_registered">This username has already been registered</string>
    <string name="order_amount" translatable="false">Order amount</string>
    <string name="no_order_yet">No Order Yet or Your Order Already Finished</string>
    <string name="text_order_id">Order ID :</string>
    <string name="text_order_status">Order status :</string>
    <string name="no_history_yet">No history yet</string>
    <string name="how_to_order">How to order</string>
    <string name="frequently_ask_question_faq">Frequently Ask Question (FAQ)</string>
    <string name="about_me">About me</string>
    <string name="about_us">About Us</string>
    <string name="faq">Frequently Ask Question</string>
    <string name="how_to_usage">How to Usage</string>
    <string name="tv_faq">FAQ</string>
    <string name="contact_kantin_lahap">Contact Kantin Lahap</string>
    <string name="developer_contact">Developer Contact</string>
    <string name="address" translatable="false">Jln. Alternatif Babakan Tengah, Kec. Dramaga, Bogor 16680, Indonesia</string>
    <string name="hp_ilham">+62 852 9410 6008</string>
    <string name="contact_1" translatable="false">Ingin bermitra dengan kami atau ada masukan silakan hubungi kami di:</string>
    <string name="contact_2" translatable="false">Ingin memberi masukan terhadap aplikasi Lahap, silakan hubungi:</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_konten_1" translatable="false">7 Langkah Sederhana Memulai Pola Hidup Sehat Agar Panjang Umur</string>
    <string name="title_konten_2" translatable="false">Alodokter: Ini Makanan Sehat yang Perlu Dikonsumsi Setiap Hari</string>
    <string name="title_konten_3" translatable="false">5 Makanan Sehat yang Dianjurkan untuk Mengobati Tulang Keropos</string>
    <string name="pilih_kantin">Pilih Kantin</string>
    <string name="konten_untuk_kamu">Konten untuk Kamu</string>
    <string name="empty_textview">empty</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="fcm_message">fcm_message</string>
    <string name="selengkapnya">Read Full</string>
    <string name="ex_price">Rp100,000.00</string>
    <string name="rek_bni_ilham">Ke Rekening BNI a.n <b>ILHAM MAULIDIN</b> dibawah ini:</string>
    <string name="norek_bni_ilham">0327671638</string>
    <string name="transfer_uang">Terima Kasih telah Order di Kantin Lahap, Silakan Transfer Uang Anda Sejumlah:</string>
    <string name="ilmu_komputer_ipb_53">Ilmu Komputer IPB 53</string>
    <string name="no_telp_gilang">+62 823 3505 6500</string>
    <string name="email_bara_system">barasystemsolution@gmail.com</string>

</resources>
