<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_select_canteen"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/select_canteen" />
        <item
            android:id="@+id/nav_order_status"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/order_status" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/cart" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
