<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_select_canteen">

    <fragment
        android:id="@+id/nav_select_canteen"
        android:name="com.lahaptech.lahap.user.home.SelectCanteen.SelectCanteenFragment"
        android:label="@string/select_canteen"
        tools:layout="@layout/fragment_selectcanteen" />

    <fragment
        android:id="@+id/nav_order_status"
        android:name="com.lahaptech.lahap.user.home.orderstatus.GalleryFragment"
        android:label="@string/order_status"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_order_history"
        android:name="com.lahaptech.lahap.user.home.orderhistory.SlideshowFragment"
        android:label="@string/order_history"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.lahaptech.lahap.user.home.cart.ToolsFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.lahaptech.lahap.user.home.send.SendFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_send" />
</navigation>