<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:background="@drawable/background_gradient"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="120dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_name_input"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/username_ipb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_username_input"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType=""
            android:importantForAutofill="no" />

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/register_email_input"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/email_ex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_phone_number_input"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/hint_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:importantForAutofill="no" />

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_password_input"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/register_btn"
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageVIew"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/background_white"
        android:padding="5dp"
        android:layout_width="70dp"
        android:layout_height="70dp" />

    <TextView
        android:textSize="20sp"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageVIew"
        android:text="Sign Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>